--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,17 +4,18 @@
 
     <application
         android:name=".BaseApplication"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:allowBackup="true">
+        android:theme="@style/AppTheme">
+        <activity android:name=".settingOptions"></activity>
         <activity
             android:name=".createLogEntry"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".CreateNotifications" />
-        <activity android:name=".logHomepage"/>
+        <activity android:name=".setNotifications" />
+        <activity android:name=".logHomepage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
