workoutPlanner now populates a TextView field upon having input and pressing the submit button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".workoutPlanner"></activity>
+        <activity android:name=".workoutPlanner"
+            android:windowSoftInputMode="adjustPan"></activity>
         <activity android:name=".settingOptions" />
         <activity
             android:name=".createLogEntry"
