--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".workoutPlanner"
-            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".tutorial"></activity>
+        <activity
+            android:name=".workoutPlanner"
+            android:windowSoftInputMode="adjustPan" />
         <activity android:name=".settingOptions" />
         <activity
             android:name=".createLogEntry"
