--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".tutorial"></activity>
+        <activity android:name=".log_proof"></activity>
+        <activity android:name=".tutorial" />
         <activity
             android:name=".workoutPlanner"
             android:windowSoftInputMode="adjustPan" />
