--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,12 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    // this is the section where I'm adding Facebook's shit :D
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.facebook.android:facebook-share:[5,6)'
 
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:cardview-v7:29.0.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
