--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.flexinfitness">
 
+    <!-- region permissionsCamera-->
+    <uses-feature android:name="android.hardware.camera"
+        android:required="true" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <!-- endregion permissionsCamera-->
+
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -10,6 +16,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <!-- region providerCamera-->
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="com.example.flexinfitness.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths" />
+        </provider>
+        <!-- endregion providerCamera-->
+
         <activity android:name=".log_proof"></activity>
         <activity android:name=".tutorial" />
         <activity
