--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <!-- endregion permissionsCamera-->
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".BaseApplication"
         android:allowBackup="true"
@@ -16,8 +18,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".camera" />
 
-        <!-- region providerCamera-->
+        <!-- region providerCamera -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.example.flexinfitness.fileprovider"
@@ -26,10 +29,9 @@
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
-        </provider>
-        <!-- endregion providerCamera-->
+        </provider> <!-- endregion providerCamera -->
 
-        <activity android:name=".log_proof"></activity>
+        <activity android:name=".log_proof" />
         <activity android:name=".tutorial" />
         <activity
             android:name=".workoutPlanner"
