--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".camera" />
+        <activity android:name=".camera"
+            android:windowSoftInputMode="adjustPan"/>
 
         <!-- region providerCamera -->
         <provider
