--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name=".createLogEntry"
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".setNotifications" />
-        <activity android:name=".log" />
+        <activity android:name=".logHomepage" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
